--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ droplet361/punk-bot-subgraph",
-    "create-local": "graph create --node http://localhost:8020/ droplet361/punk-bot-subgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ droplet361/punk-bot-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 droplet361/punk-bot-subgraph"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ punkbodies/punkbodies",
+    "create-local": "graph create --node http://localhost:8020/ punkbodies/punkbodies",
+    "remove-local": "graph remove --node http://localhost:8020/ punkbodies/punkbodies",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 punkbodies/punkbodies"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.0",
